--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "type": "module",
   "bin": {
-    "slack-mcp": "src/cli.ts"
+    "slack-mcp": "bin/slack-mcp"
   },
   "scripts": {
     "start": "tsx src/cli.ts",
